Fix padding-inline property in icon class for consistent spacing

--- a/frontend/sass/utils/_icons.sass
+++ b/frontend/sass/utils/_icons.sass
@@ -4,6 +4,7 @@
 .icon
     font-size: 1em
     display: inline-block
+    padding-inline: .5em
     font-family: "Bootstrap-icons"
 
 @include mix.icon-generator()
